# TikTokClone

./: .gitignore  README.md  batch_image_resizer.py  pyproject.toml  steps.md  ui.vue
tiktokApi/: data.py  manage.py  requirements.txt
tiktokApi/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
tiktokApi/api/: models.py  urls.py  views.py
tiktokApi/comments/: models.py  serializers.py  views.py
tiktokApi/core/: apps.py
tiktokApi/like/: models.py  urls.py  views.py
tiktokApi/pagination/: custompagination.py
tiktokApi/postsapi/: admin.py  apps.py  models.py  serializers.py  views.py
tiktokApi/search/: urls.py  views.py
tiktokApi/tiktopApi/: asgi.py  settings.py  urls.py  wsgi.py
tiktokFrontEnd/: README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
tiktokFrontEnd/EXTRAS/: profile.js
tiktokFrontEnd/components/: AuthOverlay.vue  EditProfileOverlay.vue  Login.vue  MenuItem.vue  MenuItemFollow.vue  PostMain.vue  PostUser.vue  Register.vue  Search.vue  SearchUser.vue  SideNavMain.vue  TextInput.vue  TopNav.vue
tiktokFrontEnd/composables/: loggedinuser.js  usePagination.js
tiktokFrontEnd/middleware/: auth.js
tiktokFrontEnd/pages/: index.vue  search.vue
tiktokFrontEnd/plugins/: stores.js
tiktokFrontEnd/stores/: comments.js  followers.js  general.js  likes.js  loadMore.js  pagination.js  profile.js  search.js  user.js
tiktopApi/: manage.py  requirements.txt
tiktopApi/api/: admin.py  models.py  serializers.py  urls.py  views.py
tiktopApi/comments/: urls.py
tiktopApi/like/: admin.py  urls.py
(+24 files in other folders)
