[project]
name = "tiktokclone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "django==5.0.6",
    "django-cors-headers==4.4.0",
    "django-js-asset==2.2.0",
    "django-mptt==0.16.0",
    "django-tinymce==4.1.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "factory-boy==3.3.0",
    "faker==26.0.0",
    "idna==3.7",
    "pillow==10.4.0",
    "pyjwt==2.8.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "six==1.16.0",
    "sqlparse==0.5.0",
    "tzdata==2024.1",
    "urllib3==2.2.2",
]
